--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.16.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   }
 }
